# DustBusterAI-Software

./: .gitignore  README.md  map.pgm  map.yaml  output.txt  problems.txt
dustbuster_ws/: build.bash  costmap.yaml  map.pgm  map.yaml  map2.pgm  map2.yaml  map_data.txt
dustbuster_ws/description/: check.bash  global_frame.urdf  lidar_2d.xacro  robot_draft.urdf  robot_draft.urdf.xacro
dustbuster_ws/gazebo/: launch_gazebo.py  room.world
dustbuster_ws/gazebo/models/robot_draf/: model.config  model.sdf
dustbuster_ws/gazebo/models/robot_draft/: model.sdf
dustbuster_ws/gazebo/models/robot_draft/robot_draft/: model.config  model.sdf
dustbuster_ws/gazebo/plugins/: CMakeLists.txt  build.py
dustbuster_ws/gazebo/plugins/output/: set_plugin_path.bash
dustbuster_ws/gazebo/plugins/src/: wheel_velocity_setter.cpp
dustbuster_ws/install/: local_setup.sh  setup.sh
dustbuster_ws/install/db_gazebo_plugins/share/ament_index/resource_index/package_run_dependencies/: db_gazebo_plugins
dustbuster_ws/install/db_gazebo_plugins/share/ament_index/resource_index/parent_prefix_path/: db_gazebo_plugins
dustbuster_ws/install/db_gazebo_plugins/share/db_gazebo_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dustbuster_ws/install/db_gazebo_plugins/share/db_gazebo_plugins/cmake/: db_gazebo_pluginsConfig-version.cmake  db_gazebo_pluginsConfig.cmake
dustbuster_ws/install/db_gazebo_plugins/share/db_gazebo_plugins/environment/: ament_prefix_path.dsv  path.dsv
dustbuster_ws/install/dustbuster-navigation/share/dustbuster-navigation/: package.sh  package.zsh
dustbuster_ws/install/dustbuster-navigation/share/dustbuster-navigation/cmake/: dustbuster-navigationConfig.cmake
dustbuster_ws/install/dustbuster_nav/lib/dustbuster_nav/: diff_drive  drive  driver  driver = dustbuster_nav.driver:maindiff_drive  talker
dustbuster_ws/install/dustbuster_nav/share/dustbuster_nav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dustbuster_ws/launch/: launch_sim.launch.py  mapper_params_online_async.yaml  nav2_bringup.launch.py  nav2_params.yaml  room.rviz  room.world  setup.bash  slam_toolbox_config.yaml
dustbuster_ws/launch/config/: mapper_params_online_async.yaml  nav2_params.yaml
dustbuster_ws/launch/config/map_slam/: map.pgm  map.yaml
dustbuster_ws/launch/description/: dustbuster.urdf
dustbuster_ws/launch/gazebo/: room.world
dustbuster_ws/launch/gazebo(legacy)/models/room_walls/: model.sdf
dustbuster_ws/launch/gazebo/models/lidar_2d/: model.sdf
dustbuster_ws/launch/gazebo/models/robot_draft/: model.sdf
dustbuster_ws/launch/gazebo/plugins/src/: wheel_velocity_setter.cpp
dustbuster_ws/log/: latest_build
dustbuster_ws/src/dustbuster-navigation/: package.xml  setup.cfg  setup.py
dustbuster_ws/src/dustbuster_launch/: package.xml  setup.cfg  setup.py
dustbuster_ws/src/dustbuster_launch/dustbuster_launch/: launch.launch.py
dustbuster_ws/src/dustbuster_launch/dustbuster_launch/config/: mapper_params_online_async.yaml  nav2_params.yaml
dustbuster_ws/src/dustbuster_launch/dustbuster_launch/config/cartographer/: dustbuster_2d.lua
dustbuster_ws/src/dustbuster_launch/dustbuster_launch/config/cartographer/map/: map_1681937656.pgm  map_1681937656.yaml
dustbuster_ws/src/dustbuster_launch/dustbuster_launch/config/gazebo_worlds/: room.world
dustbuster_ws/src/dustbuster_launch/dustbuster_launch/description/: check.bash  convert.bash  dustbuster.urdf
dustbuster_ws/src/dustbuster_launch/dustbuster_launch/description/mesh/: chassis.stl
dustbuster_ws/src/dustbuster_launch/launch/: cartographer.launch.py  kill_all_nodes.bash  kill_gazebo.bash  launch_sim.launch.py  nav2_bringup.launch.py  occupancy_grid.launch.py  online_async_launch.py
dustbuster_ws/src/dustbuster_launch/launch/config/: mapper_params_online_async.yaml
dustbuster_ws/src/dustbuster_launch/launch/description/: convert_and_check.bash
dustbuster_ws/src/dustbuster_localization/: package.xml  setup.cfg  setup.py
dustbuster_ws/src/dustbuster_localization/dustbuster_localization/: imu_filter.py
dustbuster_ws/src/dustbuster_localization/launch/: ekf_fusion.launch.py
dustbuster_ws/src/dustbuster_nav/: setup.cfg  setup.py
dustbuster_ws/src/dustbuster_nav/dustbuster_nav/: diff_drive.py
dustbuster_ws/src/dustbuster_nav/dustbuster_nav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dustbuster_ws/src/dustbuster_navigation/: package.xml  setup.cfg  setup.py
dustbuster_ws/src/dustbuster_navigation/dustbuster_navigation/: TSPGeneticSolver.py  WaypointsNavigation.py  map2.pgm  map2.yaml  map_discretizer.py  rotate360.py  save_costmap.py  save_map.py
dustbuster_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dustbuster_ws/src/install/dustbuster-navigation/share/dustbuster-navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml
dustbuster_ws/src/log/: latest_build
genetic-algorithm/: TSPGeneticSolver.py  genetic.py  map2.pgm  map_discretizer.py
legacy files/dustbuster_nav_legacy_scripts/: diff_drive.py  driver.py  robot_params.yaml
legacy files/legacy_description/: robot_draft.urdf
legacy files/legacy_gazebo_files/: launch_gazebo.py
legacy files/legacy_gazebo_files/models/lidar_2d/: model.config
legacy files/legacy_gazebo_files/models/room_walls/: model.config
legacy files/legacy_gazebo_files/plugins/: CMakeLists.txt  build.py  package.xml
legacy files/legacy_gazebo_files/plugins/src/: diff_drive_wheel_encoder.cpp
