<?xml version="1.0"?>
<package format="2">
  <name>dustbuster_localization</name>
  <version>0.1.0</version>
  <description>ROS2 localization package for DustBusterAI</description>
  <maintainer email="onurulusoys4@gmail.com">Onur Ulusoy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_localization</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
